# hackathon-todo

./: .gitignore  CLAUDE.md  CONSTITUTION.md  GEMINI.md  README.md
.spec-kit/: config.yaml
backend/: .env.example  .gitignore  CLAUDE.md  README.md  TESTING.md  config.py  db.py  main.py  middleware.py  models.py  pyproject.toml  schemas.py  test.db  test_concurrent.db  test_isolation.db
backend/migrations/: 001_create_tasks_table.sql  002_create_better_auth_tables.sql  003_create_jwks_table.sql
backend/routes/: __init__.py  tasks.py
backend/scripts/: migrate.py  migrate_better_auth.py  migrate_jwks.py  verify_tables.py
backend/tests/: conftest.py  test_api_contract.py  test_concurrent_operations.py  test_data_isolation.py  test_integration.py  test_models_schemas.py  test_simple.py
docs/troubleshooting/: jwt-authentication-better-auth-eddsa.md
frontend/: CLAUDE.md  README.md  jest.config.js  package-lock.json  package.json  setupTests.ts  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: Navbar.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/tests/components/: TaskForm.test.tsx  TaskItem.test.tsx  TaskList.test.tsx
specs/: architecture.md  overview.md
specs/001-phase2-implementation/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/api/: auth-flow.md  rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/ui/: components.md  pages.md
(+19 files in other folders)
